--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -1,11 +1,27 @@
-<div class="container-fluid">
-  <div class="row">
-    <div style="height: 30px;">
-      DE EN
+<div class="container-fluid fixed-top navbar-main" style="pointer-events: none;">
+  <div class="row subbar">
+    <div class="col d-flex">
+      <div class="ml-auto">
+         
+        <ul class="nav" style="pointer-events: all;">
+          <li class="nav-item">
+            <a class="nav-link" href="#">DE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">EN</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">I</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">F</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
+  <div class="row mainbar">
+    <div class="col-auto" style="pointer-events: all;">
       <a href="/" class="brand-01">
         <div class="font-weight-bold brand-text">Art</div>
         <img class="brand-image" src="{{ 'icon_heart_px.png' | asset_url }}" alt="{{ shop.name | strip_html }}">
@@ -13,8 +29,16 @@
         <div class="font-weight-normal brand-text hidden-xs-down">&nbsp;Studio</div>
       </a>
     </div>
-    <div class="col">
-      Info
+    <div class="ml-auto col-auto d-flex" style="pointer-events: all;">
+      <div class="">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link toggle-slideout-right" href="#">Info</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
+
+<slideout></slideout> 
