--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,1 +1,2 @@
-@import 'slideout';
+@import '../../ts/components/slideout/slideout.component.scss';
+@import '../../ts/components/nav-items/nav-items.component.scss';
