--- a/src/ts/components/slideout/slideout.component.html
+++ b/src/ts/components/slideout/slideout.component.html
@@ -1,4 +1,2 @@
-<nav>
-  <h2>Menu</h2>
-  <nav-items linklist="linklist"></nav-items>
-</nav>
+<nav-items linklist="linklist" pills="false" vertical="true"></nav-items>
+
