--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -6,6 +6,7 @@ html, body {
 #barba-wrapper, .barba-container {
     // width: 100vw;
     overflow: hidden;
+    min-height: 60vh;
 }
 
 #rivets-top {
