--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -22,7 +22,7 @@
   </div>
   <div class="row mainbar">
     <div class="col-auto" style="pointer-events: all;">
-      <a href="/" class="brand-01">
+      <a href="/" class="brand-mix">
         <div class="font-weight-bold brand-text">Art</div>
         <img class="brand-image" src="{{ 'icon_heart_px.png' | asset_url }}" alt="{{ shop.name | strip_html }}">
         <div class="font-weight-bold brand-text">Code</div>
@@ -33,7 +33,7 @@
       <div class="">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link toggle-slideout-right" href="#">Info</a>
+            <a class="nav-link" rv-slideout-toggler="right" href="#">Info</a>
           </li>
         </ul>
       </div>
@@ -41,4 +41,4 @@
   </div>
 </div>
 
-<slideout></slideout> 
+<slideout class="slideout-dark"></slideout> 
