--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -4,13 +4,17 @@
     .nav-link {
       font-size: 0.8rem;
       padding: 0.5rem 0.4rem;
+      color: $dark;
     }
   }
 
   .mainbar {
     .nav-link {
+      font-weight: $font-weight-bold;
       font-size: 20px;
-      // letter-spacing: 0.1em;
+      letter-spacing: 0.1em;
+      color: $dark;
     }
+
   }
 }
