--- a/src/ts/components/slideout/slideout.component.scss
+++ b/src/ts/components/slideout/slideout.component.scss
@@ -19,8 +19,8 @@ slideout {
   }
 
   .nav-link {
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: $font-weight-bold;
   }
 
   &.slideout-light {
