--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -163,14 +163,14 @@ sup {
 }
 
 a {
-  color: #007bff;
-  text-decoration: none;
+  color: #000;
+  text-decoration: underline;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
 
 a:hover {
-  color: #0056b3;
+  color: #262626;
   text-decoration: underline;
 }
 
@@ -3119,12 +3119,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #000;
   background-color: transparent;
 }
 
 .btn-link:hover {
-  color: #0056b3;
+  color: #262626;
   text-decoration: underline;
   background-color: transparent;
   border-color: transparent;
@@ -6593,7 +6593,7 @@ button.bg-dark:focus {
   display: table-cell !important;
 }
 
-.d-flex {
+.d-flex, .rv-autoscroll-horizontal, .rv-autoscroll-horizontal nav-items .nav {
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
@@ -6851,7 +6851,7 @@ button.bg-dark:focus {
       flex-wrap: wrap !important;
 }
 
-.flex-nowrap {
+.flex-nowrap, .rv-autoscroll-horizontal, .rv-autoscroll-horizontal nav-items .nav {
   -ms-flex-wrap: nowrap !important;
       flex-wrap: nowrap !important;
 }
@@ -9452,6 +9452,7 @@ html, body {
 }
 
 .brand-dark, .brand-light, .brand-mix {
+  text-decoration: none;
   color: #000;
 }
 
@@ -9507,10 +9508,18 @@ html, body {
 .navbar-main .subbar .nav-link {
   font-size: 0.8rem;
   padding: 0.5rem 0.4rem;
+  color: #000;
 }
 
 .navbar-main .mainbar .nav-link {
+  font-weight: 700;
   font-size: 20px;
+  letter-spacing: 0.1em;
+  color: #000;
+}
+
+.nav-link {
+  text-decoration: none;
 }
 
 /*
@@ -9555,8 +9564,8 @@ slideout.slideout-menu-left {
 }
 
 slideout .nav-link {
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 slideout.slideout-light {
@@ -9601,6 +9610,15 @@ slideout nav-items {
 
 nav-items {
   display: block;
+}
+
+.rv-autoscroll-horizontal {
+  overflow-x: hidden;
+  white-space: nowrap;
+}
+
+.rv-autoscroll-horizontal nav-items .nav {
+  white-space: nowrap;
 }
 
 #itkanzlei_img_copyright, #itkanzlei_img_copyright {
