--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -1,66 +1,20 @@
-<footer class="imprint bg-black hidden-print">
-  <div class="container">
-    <div data-toggle="footer" data-target="#footer-adjustment" class="row">
-      <div class="col-xs-12 text-center">
-        <div class="text-uppercase my-2" id="footer-book">
-          {{ 'footer.general.header' | t }}
-          {% include 'jumplink-iconset', name: 'arrow', direction: 'top', color: 'white' %}
-        </div>
-      </div>
+<footer class="">
+  <div>
+    <div rv-autoscroll='{"angle": "horizontal", "direction":-1}'>
+      <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
+      <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
     </div>
-    <div class="row hidden-xs-up" id="footer-adjustment">
-
-      <div class="col-xs-12 col-lg-4 d-flex flex-lg-row mb-2">
-        {% if linklists.footer.links.size > 0 %}
-          <nav class="navbar navbar-toggleable-xs navbar-inverse bg-black footer-navbar d-flex align-items-xs-center align-items-lg-end w-100">
-            <div class="navbar-collapse">
-                <ul class="navbar-nav d-flex justify-content-xs-center justify-content-lg-start">
-                  {% for link in linklists.footer.links %}
-                    <li class="nav-item">
-                      <a class="nav-link" href="{{ link.url }}" title="{{ link.title }}">{{ link.title }}</a>
-                    </li>
-                  {% endfor %}
-                </ul>
-            </div>
-          </nav>
-        {% endif %}
-      </div>
-
-      <div class="col-xs-12 col-lg-4 text-center">
-
-        <p class="my-3">
-          <a href="tel:{{shop.phone | remove: ' ' | remove: '.'}}" class="btn btn-outline-secondary">{{shop.phone}}</a>
-        </p>
-
-        <p class="mt-3">
-          <small>
-            <a href="mailto:{{shop.email}}" class="">{{shop.email}}</a>
-          </small>
-        </p>
-
-
-        <p class="my-3">
-          {{shop.address.street | replace: ",", " |"}}
-          <br>
-          {{shop.address.zip}} {{shop.address.city}}
-        </p>
-
-      </div>
-
-      <div class="col-xs-12 col-lg-4 d-flex flex-lg-row mb-2">
-        <nav class="navbar navbar-toggleable-xs navbar-inverse bg-black footer-navbar d-flex align-items-xs-center align-items-lg-end w-100">
-          <div class="navbar-collapse">
-            <ul class="navbar-nav d-flex justify-content-center justify-content-lg-end">
-              <li class="nav-item">
-                <a class="nav-link" href="/" title="{{shop.name}}">
-                  © 2017 {{shop.name}}
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-
+  </div>
+  <div>
+    <div rv-autoscroll='{"angle": "horizontal", "direction":1}'>
+      {% for i in (1..20) %}
+        <div class="brand-dark py-3" style="pointer-events: all;">
+          <div class="font-weight-bold brand-text">Art</div>
+          <img class="brand-image" src="{{ 'icon_heart_px.png' | asset_url }}" alt="{{ shop.name | strip_html }}">
+          <div class="font-weight-bold brand-text">Code</div>
+          <div class="font-weight-normal brand-text hidden-xs-down">&nbsp;Studio</div>
+        </div>
+      {% endfor %}
     </div>
   </div>
 </footer>
