--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -1,20 +1,17 @@
 <footer class="">
-  <div>
-    <div rv-autoscroll='{"angle": "horizontal", "direction":-1}'>
-      <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
-      <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
-    </div>
+  <div rv-autoscroll='{"angle": "horizontal", "jumps": 3, "delay": 130}'>
+    {% for i in (1..20) %}
+      <div class="brand-dark px-3" style="pointer-events: all;">
+        <div class="font-weight-bold brand-text">Art</div>
+        <img class="brand-image" src="{{ 'icon_heart_px.png' | asset_url }}" alt="{{ shop.name | strip_html }}">
+        <div class="font-weight-bold brand-text">Code</div>
+        <div class="font-weight-normal brand-text hidden-xs-down">&nbsp;Studio</div>
+      </div>
+    {% endfor %}
   </div>
-  <div>
-    <div rv-autoscroll='{"angle": "horizontal", "direction":1}'>
-      {% for i in (1..20) %}
-        <div class="brand-dark py-3" style="pointer-events: all;">
-          <div class="font-weight-bold brand-text">Art</div>
-          <img class="brand-image" src="{{ 'icon_heart_px.png' | asset_url }}" alt="{{ shop.name | strip_html }}">
-          <div class="font-weight-bold brand-text">Code</div>
-          <div class="font-weight-normal brand-text hidden-xs-down">&nbsp;Studio</div>
-        </div>
-      {% endfor %}
-    </div>
+
+  <div rv-autoscroll='{"angle": "horizontal", "direction":-1, "jumps": 4, "delay": 120 }'>
+    <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
+    <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
   </div>
 </footer>
