--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -1,5 +1,5 @@
-<footer class="">
-  <div rv-autoscroll='{"angle": "horizontal", "jumps": 3, "delay": 130}'>
+<footer class="footer">
+  <div rv-autoscroll='{"angle": "horizontal", "jumps": 10, "delay": 200}'>
     {% for i in (1..20) %}
       <div class="brand-dark px-3" style="pointer-events: all;">
         <div class="font-weight-bold brand-text">Art</div>
@@ -10,7 +10,7 @@
     {% endfor %}
   </div>
 
-  <div rv-autoscroll='{"angle": "horizontal", "direction":-1, "jumps": 4, "delay": 120 }'>
+  <div rv-autoscroll='{"angle": "horizontal", "direction":-1, "jumps": 10, "delay": 300 }'>
     <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
     <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
   </div>
