--- a/src/ts/components/slideout/slideout.component.html
+++ b/src/ts/components/slideout/slideout.component.html
@@ -1,8 +1,8 @@
-<nav-items linklist="system.linklists | get 'main-menu" pills="false" vertical="true"></nav-items>
-
+<nav-items linklist="linklist" pills="false" vertical="true"></nav-items>
+{foo}
 <footer class="footer">
-  <div rv-autoscroll='{"angle": "horizontal", "jumps": 10, "delay": 200, "width":"100vw"}' scroll-width="100vw">
-    <div rv-each-index="'[0,1,2,3,4,5,6,7,8,9,10]'" class="brand-light px-3" style="pointer-events: all;">
+  <div rv-autoscroll='{"angle": "horizontal", "jumps": 10, "delay": 200, "width":"100vw"}'>
+    <div rv-each-index="[0,1,2,3,4,5,6,7,8,9,10]" class="brand-light px-3" style="pointer-events: all;">
       <div class="font-weight-bold brand-text">Art</div>
       <img class="brand-image" rv-src="system.assets | get 'icon_heart_px.png'" alt="Art + Code Studio">
       <div class="font-weight-bold brand-text">Code</div>
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div rv-autoscroll='{"angle": "horizontal", "direction":-1, "jumps": 10, "delay": 300, "width":"100vw" }' scroll-width="100vw">
+  <div rv-autoscroll='{"angle": "horizontal", "direction":-1, "jumps": 10, "delay": 300, "width":"100vw" }'>
     <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
     <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
   </div>
