split many binders and formatters, not all yet

--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -31,7 +31,7 @@
 
 <body id="{{ page_title | handle }}">
 
-  <div id="rivets-top">
+  <div id="layout-top">
     {% include 'jumplink-navigation' %}
   </div>
 
@@ -43,7 +43,7 @@
     </div>
   
   
-    <div id="rivets-bottom">
+    <div id="layout-bottom">
       {% include 'jumplink-footer' %}
     </div>
 
