[Component] New iconset component

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,2 +1,3 @@
 @import '../../ts/components/slideout/slideout.component.scss';
 @import '../../ts/components/nav-items/nav-items.component.scss';
+@import '../../ts/components/iconset/iconset.component.scss';
