--- a/theme/snippets/jumplink-iconset.liquid
+++ b/theme/snippets/jumplink-iconset.liquid
@@ -1,4 +1,4 @@
-{% assign snippet = name | prepend: 'jumplink-iconset-' %}
+{% assign snippet = name | prepend: 'jumplink-iconset_' %}
 
 {% assign class = '' %}
 
