--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -32,7 +32,10 @@
     <div class="ml-auto col-auto d-flex align-items-center">
       <ul class="nav" style="pointer-events: all;">
         <li class="nav-item">
-          <a class="nav-link" rv-slideout-toggler="right" href="#">Info</a>
+          <a class="nav-link" rv-slideout-toggler="right" href="#">
+            <span class="text">Info</span>
+            <iconset src="'{{ 'iconset_icon_dots.svg' | asset_url }}'" name="'iconset_icon_dots.svg'"></iconset>
+          </a>
         </li>
       </ul>
     </div>
