--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -4,12 +4,7 @@ html, body {
 }
 
 #barba-wrapper, .barba-container {
-    // width: 100vw;
-    overflow: hidden;
-    min-height: 60vh;
-}
-
-#rivets-top {
-    position: absolute;
     width: 100%;
+    overflow: hidden;
+    min-height: calc(100vh - 73px);
 }
