--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer pb-2">
   <div rv-autoscroll='{"angle": "horizontal", "jumps": 10, "delay": 200}'>
     {% for i in (1..20) %}
       <div class="brand-dark px-3" style="pointer-events: all;">
