[Barba Router] Outsourced to rivets.js fork

--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -36,7 +36,7 @@
   </div>
 
   <div id="slideout-panel">
-    <div id="barba-wrapper">
+    <div rv-view="" id="barba-wrapper">
       <div class="barba-container" {% include 'jumplink-utils-barba-container-attributes' %}>
         {{ content_for_layout }}
       </div>
