Recopy tinybind to modules folder, updates for the new tinbind fork version

--- a/theme/templates/index.liquid
+++ b/theme/templates/index.liquid
@@ -2,8 +2,11 @@
 
   {{ content_for_index }}
 
-  <div class="row">
+  <h1>test {dataset.title}</h1>
+  <h1 rv-text="'test2'"></h1>
+  <h1 rv-html="dataset.title"></h1>
 
+  <div class="row">
 
     {% if settings.blog_enable and settings.home_blog_preview_enable %}
       <div class="col-12">
