--- a/theme/sections/product-scrollbar.liquid
+++ b/theme/sections/product-scrollbar.liquid
@@ -1,12 +1,11 @@
 <div rv-shopify-section-product-scrollbar='{{ collections[section.settings.collection] | json }}' class="container-fluid">
-  {{collection[section.settings.collection] | json}}
   <div class="row flex-nowrap scrollbar-invisible scrollbar-x-scroll-on-hover" rv-scrollbar-dragable="">
     <div class="col-3"></div>
     {% for product in collections[section.settings.collection].products %}
       {% comment %} 900x1600 = 9x16 * 100 {% endcomment %}
-      <div class="col-6 px-0 content-box ratio-3-4">
+      <a href="{{product.url}}" class="col-6 px-0 content-box ratio-3-4">
         <img class="content" src="{{ product.featured_image | img_url: '1200x800', scale: 2 }}" alt="{{image.alt}}" style="padding: {{block.settings.spacing}}px" />
-      </div>
+      </a>
     {% endfor %}
   </div>
   <div class="row">
