--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -1,17 +1,3 @@
 <footer class="footer pb-2">
-  <div rv-autoscroll='{"angle": "horizontal", "jumps": 10, "delay": 200}'>
-    {% for i in (1..20) %}
-      <div class="brand-dark px-3" style="pointer-events: all;">
-        <div class="font-weight-bold brand-text">Art</div>
-        <img class="brand-image" src="{{ 'icon_heart_px.png' | asset_url }}" alt="{{ shop.name | strip_html }}">
-        <div class="font-weight-bold brand-text">Code</div>
-        <div class="font-weight-normal brand-text hidden-xs-down">&nbsp;Studio</div>
-      </div>
-    {% endfor %}
-  </div>
-
-  <div rv-autoscroll='{"angle": "horizontal", "direction": -1, "jumps": 10, "delay": 300 }'>
-    <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
-    <nav-items linklist="system.linklists.footer" pills="false" vertical="false"></nav-items>
-  </div>
+  TODO
 </footer>
