--- a/theme/sections/product-scrollbar.liquid
+++ b/theme/sections/product-scrollbar.liquid
@@ -1,17 +1,16 @@
 <shopify-section-product-scrollbar class="d-block container-fluid">
-  <div class="row flex-nowrap scrollbar-invisible scrollbar-x-scroll-on-hover" rv-scrollbar-dragable="">
+  <div class="row flex-nowrap scrollbar-invisible scrollbar-x-auto" rv-scrollbar-dragable="" rv-on-scroll="onScroll">
     <div class="col-3"></div>
     {% for product in collections[section.settings.collection].products %}
       {% comment %} 900x1600 = 9x16 * 100 {% endcomment %}
-      <div rv-on-tap="onProductTap" rv-on-mouseenter="onProductMouseenter" data-url="{{product.url}}" class="col-6 px-0 content-box ratio-3-4 product-{{product.handle}}">
+      <div rv-on-tap="onProductTap" rv-on-mouseenter="onProductMouseenter" data-url="{{product.url}}" data-title="{{product.title}}" class="col-6 px-0 content-box ratio-3-4 product-{{product.handle}}">
         <img class="content" src="{{ product.featured_image | img_url: '1200x800', scale: 2 }}" alt="{{image.alt}}" />
       </div>
     {% endfor %}
+    <div class="col-3"></div>
   </div>
   <div class="row">
-    <div class="col-12 text-center">
-      {title}
-    </div>
+    <div class="col-12 text-center" rv-html="title"></div>
   </div>
 </shopify-section-product-scrollbar>
 
