--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -33,8 +33,8 @@
 @import 'templates';
 @import 'dropdown';
 @import 'sections';
+@import 'cursor';
 
 @import '../ts/components/index';
 @import '../ts/binders/index';
-
 @import 'sections/index';
