--- a/src/ts/components/_index.scss
+++ b/src/ts/components/_index.scss
@@ -1,3 +1,3 @@
 @import './nav-items/nav-items.component.scss';
 @import './iconset/iconset.component.scss';
-@import './contact/contact.component.scss';
+@import './newsletter/newsletter.component.scss';
